changes made to the simulation page

--- a/public/test.html
+++ b/public/test.html
@@ -63,8 +63,7 @@
         <div class="sim-table-container">
           <div class="sim-table" id="sim-tab">
             <div class="sim-final-calculated-ratio-text">
-              Hence, we can see that a line drawn parallel to the base of the
-              triangle divides the sides in equal ratios of:
+              Hence, The parallel line divides the sides in equal ratios, thus proving the Thale's Theorem:
             </div>
             <div class="sim-final-calculation">
               <div class="sim-final">
@@ -105,8 +104,19 @@
               <button class="simulator-button" id="calculateRatioButton" onclick="calculateUserRatio()">Show
                 Ratio</button>
             </div>
-            <div class="sim-final-calculated-ratio" id="ratio1-cal"></div>
-            <div class="sim-final-calculated-ratio" id="ratio2-cal"></div>
+            <div class="sim-final-calculation">
+              <div class="sim-final">
+                <div class="sim-final-calculated firstRatio">PA / AQ</div>
+                <div class="sim-final-calculated">PB / BR</div>
+              </div>
+              <div class="sim-final-equal">
+                =
+              </div>
+              <div class="sim-final">
+                <div class="sim-final-calculated-ratio" id="ratio1-cal"></div>
+                <div class="sim-final-calculated-ratio" id="ratio2-cal"></div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="coordinates">
