final push-Project Completed

--- a/public/test.html
+++ b/public/test.html
@@ -60,7 +60,7 @@
             <br /><b>Step 7 : </b>Utilize the measured side lengths to calculate
             the ratio between the bisected sides. <br /><b>Step 8 : </b>Use
             Click on the "Calculate Ratio" button to obtain the ratios.
-            Input the lengths calculated by you and Click Show Ratio. Compare it with the actual result. If they do not
+            Input the lengths calculated by you and Click "Show Ratio" button. Compare it with the actual result. If they do not
             match, there might be an error in the calculation. Retry by
             recalculating the lengths and ratio using the scale until you get a
             match.
@@ -353,7 +353,7 @@
         "Click on the Use scale button to get the scale on the graph.",
         "Utilize the ruler to measure the lengths of the sides divided by the parallel line. Take note of these lengths.",
         "Utilize the measured side lengths to calculate the ratio between the bisected sides.",
-        "Click on the Calculate Ratio button to obtain the ratios.Input the lengths calculated by you and Click Show Ratio. Compare it with the actual result. If they do not match, there might be an error in the calculation. Retry byrecalculating the lengths and ratio using the scale until you get a match.",
+        "Click on the Calculate Ratio to obtain the actual ratios. Input the lengths calculated by you and Click Show Ratio button. Compare it with the actual result. If they do not match, there might be an error in the calculation. Retry by recalculating the lengths and ratio using the scale",
       ];
 
       let step = steps[0];
